--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -10,11 +10,17 @@ $panel-default-border: $laravel-border-color;
 $panel-inner-border: $laravel-border-color;
 
 // Brands
-$brand-primary: #3097D1;
+$brand-primary: #3880ff;
+$brand-secondary: #0cd1e8; 
+$brand-tertiary: #7044ff; 
+$brand-medium: #989aa2;
+$brand-tertiary: #7044ff; 
 $brand-info: #8eb4cb;
-$brand-success: #2ab27b;
-$brand-warning: #cbb956;
-$brand-danger: #bf5329;
+$brand-success: #10dc60;
+$brand-warning: #ffce00;
+$brand-danger: #f04141;
+$brand-dark: #222428;
+$brand-light: #f4f5f8;
 
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
@@ -35,3 +41,6 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #fff;
+
+
+
